# ucsd-schedulizer

./: .gitignore  README.md  pyproject.toml
examples/: schedule.txt
src/schedulizer/: __init__.py  cli.py  ics_build.py  parse.py  pdf_parse.py
tests/: test_schedulizer.py
