[project]
name = "ucsd-schedulizer"
version = "0.1.0"
description = "Turn a UCSD WebReg schedule (PDF or plain text) into a Google Calendar .ics file."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "icalendar>=5.0",
    "tzdata>=2024.1",
    "pdfplumber>=0.11",
]

[project.scripts]
schedulize = "schedulizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schedulizer"]